// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totaling 
    $235,123,409.87
  </h3>
</div>
`;

exports[`Should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h3>
    Viewing 
     
    expenses
     totaling 
    $2.35
  </h3>
</div>
`;
